# 2D

./: Point2D.h  README.md
collision_engine/: CMakeLists.txt
collision_engine/include/: Point2D.h  circle_object.h  collision_visitor.h  collision_world.h  physics_object.h  polygon_object.h  pysical_manager.h
collision_engine/main_test/: main.cpp
collision_engine/main_test/function_in_main/: add_a_circle.cpp  add_a_polygon.cpp  graphic_create.cpp
collision_engine/src/collision_response/: circle_polygon_collision.cpp  polygon_polygon_collision.cpp
collision_engine/src/collision_visitor/: closest_point_on_segment.cpp  is_polygon_circle_collision.cpp  is_polygon_polygon_collision.cpp  is_proj_overlap.cpp  projection.cpp
collision_engine/src/collision_world/: collision_edge_detect.cpp
collision_engine/src/polygon_object/: cal_moment_of_inertia.cpp  update.cpp
include/: Point2D.h  circle_object.h  collision_visitor.h  physics_object.h  polygon_object.h  square_object.h  triangle_object.h
include/fun_in_poly/: cal_axis_type.cpp  cal_centroid.cpp  cal_moment_of_inertia.cpp  update.cpp
src/: circle_object.h  get_axis_type.cpp  get_centroid.cpp  get_moment_of_inertia.cpp  pysical_manager.cpp
src/collision_visitor/: get_normals.cpp  is_circle_circle_collision.cpp  is_polygon_circle_collision.cpp  is_polygon_polygon_collision.cpp
src/collison_response/: circle_circle_collision.cpp  circle_polygon_collision.cpp  polygon_polygon_collision.cpp
src/collison_world/: collision_edge_detect.cpp  collision_world.cpp
